--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,25 @@
 {
   "manifest_version": 3,
   "name": "Falter Restaurant Map",
-  "version": "1.0.0",
-  "description": "View Falter Lokalführer search results on an interactive map",
+  "version": "0.3.0",
+  "description": "View Falter Lokalführer search results on an interactive map with keyboard navigation and smart caching",
+  "author": "Paul Zimmert",
+
   "permissions": [
     "storage",
     "activeTab",
     "tabs"
   ],
+
   "host_permissions": [
     "https://www.falter.at/*",
     "https://nominatim.openstreetmap.org/*"
   ],
+
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self'; connect-src https://nominatim.openstreetmap.org/ https://*.openstreetmap.org/ https://*.tile.openstreetmap.org/"
   },
+
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
@@ -23,18 +28,29 @@
       "128": "icons/icon128.png"
     }
   },
+
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
+
   "content_scripts": [
     {
-      "matches": ["https://www.falter.at/lokalfuehrer/suche*"],
-      "js": ["leaflet.js", "content.js"],
-      "css": ["leaflet.css", "content.css"]
+      "matches": [
+        "https://www.falter.at/lokalfuehrer/suche*"
+      ],
+      "js": [
+        "leaflet.js",
+        "content.js"
+      ],
+      "css": [
+        "leaflet.css",
+        "content.css"
+      ]
     }
   ],
+
   "background": {
     "service_worker": "background.js"
   }
