--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ NOTES.md
 # Gemini prompt files (not the main docs/gemini.md)
 GEMINI_PROMPT*.md
 GEMINI_REVIEW*.md
+
+# Analysis and policy documents (private)
+docs/REFACTORING_ANALYSIS.md
+docs/ChromeWebStorePolicy.md
